<resources>
    <string name="app_name">Vanilai</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Oops Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="error_button">OK</string>
    <string name="error_network_title">Network Unavailable!</string>
    <string name="error_network_message">We are unable to connect to Network. Please try again later.</string>
    <string name="temperature_label_default">--</string>
    <string name="degree_img_content_description">Degree Image</string>
    <string name="time_label_default">At 05:00 PM it will be</string>
    <string name="icon_description">Day Type Icon</string>
    <string name="default_location">Alcatraz Island, CA</string>
    <string name="humidity_label">HUMIDITY</string>
    <string name="default_humidity_value">--</string>
    <string name="precipitation_label">RAIN/SNOW?</string>
    <string name="default_precipitation_value">--</string>
    <string name="summary_label">Getting current weather...</string>
    <string name="service_not_available">Google API unavailable</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude</string>
    <string name="no_address_found">Address not found</string>
    <string name="address_found">Address was found</string>
    <string name="current_temperature">%1$d</string>
    <string name="current_time_label">At %1$s it will be</string>
    <string name="current_precipitation">%1$d%%</string>
    <string name="current_humidity">%1$.2f</string>
    <string name="error_location">Please switch on GPS to use app.</string>
    <string name="error_location_title">GPS Error!</string>
    <string name="fahrenheit_label">°F</string>
    <string name="celsius_label">°C</string>
    <string name="refresh_content_description">Refresh Image</string>
    <string name="default_earthquake_summary">Getting Earthquake Information...</string>
    <string name="temperature_switch_text">Temperature Switch</string>
    <string name="magnitude_text">Magnitude</string>
    <string name="default_place_text">Place</string>
    <string name="current_earthquake_magnitude">%1$s</string>
    <string name="default_earthquake_text">Found 0 Earthquakes in Area in the last 2hrs!</string>
    <string name="hourly_button_label">HOURLY</string>
    <string name="daily_button_label">7 DAY</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_daily_data">There is no data to display.</string>
    <string name="default_week_label">This Week\'s Weather</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
    <string name="image_content_description">Icon Image</string>
</resources>
